--- a/index.html
+++ b/index.html
@@ -276,58 +276,160 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/pjbank.svg" alt="PJBank" />
+          <div class="col-lg-2 ">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/pjbank.svg" alt="PJBank" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/elo.svg" alt="Elo" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/elo.svg" alt="Elo" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/enotas.svg" alt="Enotas" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/enotas.svg" alt="Enotas" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img
-              src="assets/image/sponsors/rockcontent.svg"
-              alt="Rockcontent"
-            />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/rockcontent.svg"
+                alt="Rockcontent"
+              />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/ativy.svg" alt="Ativy" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/ativy.svg" alt="Ativy" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/sankhya.svg" alt="Sankhya" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/sankhya.svg" alt="Sankhya" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/sensedata.svg" alt="Sensedata" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/sensedata.svg" alt="Sensedata" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/envo.svg" alt="Envo" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/envo.svg" alt="Envo" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/freshworks.svg" alt="Freshworks" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/freshworks.svg"
+                alt="Freshworks"
+              />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/RITS.svg" alt="RITS" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/RITS.svg" alt="RITS" />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img
-              src="assets/image/sponsors/bomcontrole.png"
-              alt="bomcontrole"
-            />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/bomcontrole.png"
+                alt="bomcontrole"
+              />
+            </div>
           </div>
 
-          <div class="col-lg-2 sponsors__brand">
-            <img src="assets/image/sponsors/mapfre.png" alt="Mapfre" />
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/mapfre.png" alt="Mapfre" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/leadlovers.png"
+                alt="leadlovers"
+              />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/mlabs.png" alt="MLabs" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/bcredi.png" alt="BCredi" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/feedz.png" alt="Feedz" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/kinghost.png" alt="kinghost" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/dino.png" alt="Dino" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src=" " alt="GrowthLabs" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/hubspot.png" alt="Hubspot" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/ingaia.png" alt="InGaia" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/hostgator.png" alt="Hostgator" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/condomob.png" alt="CondoMob" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/solides.png" alt="Solides" />
+            </div>
           </div>
         </div>
       </div>
