add sponsors and countdown

--- a/index.html
+++ b/index.html
@@ -117,19 +117,19 @@
             <div class="countdown">
               <div class="countdown__timer">
                 <div class="countdown__box">
-                  <div class="countdown__time" id="day">12</div>
+                  <div class="countdown__time" id="days">12</div>
                   <span class="countdown__description">dias</span>
                 </div>
                 <div class="countdown__box">
-                  <div class="countdown__time" id="hour">12</div>
+                  <div class="countdown__time" id="hours">12</div>
                   <span class="countdown__description">horas</span>
                 </div>
                 <div class="countdown__box">
-                  <div class="countdown__time" id="minute">12</div>
+                  <div class="countdown__time" id="minutes">12</div>
                   <span class="countdown__description">minutos</span>
                 </div>
                 <div class="countdown__box">
-                  <div class="countdown__time" id="second">12</div>
+                  <div class="countdown__time" id="seconds">12</div>
                   <span class="countdown__description">segundos</span>
                 </div>
               </div>
@@ -150,7 +150,7 @@
     <section class="section background-light">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-5 ml-auto mr-auto mt-5 mb-5 title">
+          <div class="col-12 col-lg-5 mr-auto title">
             <div class="form">
               <h2 class="form__title">
                 Fale agora com um de <br />nossos consultores
@@ -177,7 +177,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-lg-6 ml-auto mr-auto mt-5 mb-5 title">
+          <div class="col-12 col-lg-6 ml-auto mr-auto title">
             <div class="pl-lg-5 info">
               <h2 class="info__title">
                 Exponha sua marca no Superlógica Xperience 2020!
@@ -251,7 +251,7 @@
     <section class="section background-light contact">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-9 m-auto">
+          <div class="col-12 col-lg-9 m-auto text-center">
             <h2 class="contact__title mb-3">
               Valores sujeitos a alteração, aproveite!
             </h2>
@@ -431,6 +431,340 @@
               <img src="assets/image/sponsors/solides.png" alt="Solides" />
             </div>
           </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/sciensa.png" alt="Sciensa" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/campinastech.png"
+                alt="Campinas Tech"
+              />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/accountify.png"
+                alt="Accountify"
+              />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/goonwoman.png" alt="GoonWoman" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/haprojet.png" alt="HaProjet" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/motor.png" alt="Motor" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/inovyo.png" alt="Inovyo" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/teamCulture.svg"
+                alt="Team Culture"
+              />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/Peral.png" alt="Peral" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/magikey.svg" alt="Magikey" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/aws.svg" alt="AWS" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img
+                src="assets/image/sponsors/voicercore.svg"
+                alt="Voicer Core"
+              />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/octadesk.svg" alt="OctaDesk" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/wezen.svg" alt="wezen" />
+            </div>
+          </div>
+
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/ligai.png" alt="Ligai" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/smartx.svg" alt="Smart X" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/assert.png" alt="Assert" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/kiper.svg" alt="Kiper" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/Syhus.svg" alt="Syhus" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/uplexis.svg" alt="Up Lexis" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/Hi.svg" alt="Hi platform" />
+            </div>
+          </div>
+
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/linkapi.svg" alt="Link api" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/nvoip.svg" alt="Nvoip" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/RDStation.svg" alt="RD Station" />
+            </div>
+          </div>
+
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/umovme.svg" alt="U Mov Me" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/zendesk.svg" alt="zendesk" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/castelo.svg" alt="Castelo" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/buscarid.svg" alt="buscarid" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/sensedia.svg" alt="Sensedia" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/treasy.svg" alt="Treasy" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/rivendel.svg" alt="Rivendel" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/venturehub.svg" alt="Venture Hub" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/advice.svg" alt="Advice" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/pulses.svg" alt="Pulses" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/mundi.svg" alt="Mundi" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/coblue.svg" alt="CoBlue" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/nectarCRM.svg" alt="NectarCRM" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/estabilis.svg" alt="Estabilis" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/reev.svg" alt="Reev" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/supersonic.svg" alt="Supersonic" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/tracksale.svg" alt="Tracksale" />
+            </div>
+          </div>
+
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/shawee.svg" alt="Shawee" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/dextra.svg" alt="Dextra" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/compass.svg" alt="Compass" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/ramper.svg" alt="Ramper" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/mblabs.png" alt="MB Labs" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/99Corp.svg" alt="99 Corp" />
+            </div>
+          </div>
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/sebrae.svg" alt="Sebrae" />
+            </div>
+          </div>
+
+          <div class="col-lg-2 ml-auto">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/skyone.svg" alt="Skyone" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/base.png" alt="Base" />
+            </div>
+          </div>
+
+          <div class="col-lg-2">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/weme.svg" alt="Weme" />
+            </div>
+          </div>
+
+          <div class="col-lg-2 mr-auto">
+            <div class="sponsors__brand">
+              <img src="assets/image/sponsors/claro-net.png" alt="Claro/Net" />
+            </div>
+          </div>
+
+
+
+
+
+
+
         </div>
       </div>
     </section>
