--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               Aproveite os preços especiais <br />das cotas ainda em 2019
             </p>
           </div>
-          <div class="col-12 col-lg-5 ml-auto">
+          <div class="col-12 col-lg-6 ml-auto">
             <div class="countdown">
               <div class="countdown__timer">
                 <div class="countdown__box">
@@ -212,7 +212,7 @@
           <div class="col-12 col-lg-4 ml-auto mr-auto">
             <div class="icons">
               <img src="./assets/image/people.svg" />
-              <h3 class="icons__title mt-5">6000 Participantes</h3>
+              <h3 class="icons__title">6000 Participantes</h3>
               <p class="icons__description">
                 Conecte-se com gente do Brasil inteiro! Com mais de 63% do
                 público composto por decisores, o Superlógica Xperience é a sua
@@ -224,7 +224,7 @@
           <div class="col-12 col-lg-4 ml-auto mr-auto">
             <div class="icons">
               <img src="./assets/image/calendar.svg" />
-              <h3 class="icons__title mt-5">2 dias de evento</h3>
+              <h3 class="icons__title">2 dias de evento</h3>
               <p class="icons__description">
                 Totalizando mais de 70 horas de conteúdo em diversas trilhas de
                 conteúdo com palestras das maiores autoridades em experiência do
@@ -236,7 +236,7 @@
           <div class="col-12 col-lg-4 ml-auto mr-auto">
             <div class="icons">
               <img src="./assets/image/note.svg" />
-              <h3 class="icons__title mt-5">Conteúdo segmentado</h3>
+              <h3 class="icons__title">Conteúdo segmentado</h3>
               <p class="icons__description">
                 Assinaturas, Imobiliárias e Condominial. O Superlógica Xperience
                 traz conteúdo, cases e metodologias específicas para solucionar
@@ -767,7 +767,7 @@
     <section class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 mr-auto">
+          <div class="col-lg-4 mr-auto d-flex align-items-center">
             <p>
               Telefone:
               <a href="tel:0800-709-6800" class="inline-link">0800-709-6800</a>
