--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
     <section class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 mr-auto d-flex align-items-center">
+          <div class="col-lg-4 mr-auto d-flex justify-content-center">
             <p>
               Telefone:
               <a href="tel:0800-709-6800" class="inline-link">0800-709-6800</a>
