--- a/index.html
+++ b/index.html
@@ -76,19 +76,17 @@
       href="assets/css/bootstrap/bootstrap-grid.min.css"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
-    
+
     <!-- Javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./assets/js/scrollreveal.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <script text="javascript" src="assets/js/app.js"></script>
 
-   
     <!-- typekit - fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/jfi0zzh.css" />
     <link rel="stylesheet" href="./assets/fonts/integral-cf-heavy.css" />
     <link rel="stylesheet" href="./assets/fonts/integral-cf-medium.css" />
-
   </head>
 
   <body>
@@ -259,7 +257,9 @@
               O Superlógica Xperience propõe uma nova era de experiência ao
               cliente. Seja parte disso.
             </p>
-            <a href="#contact" class="btn button-primary">Fale com um consultor</a>
+            <a href="#contact" class="btn button-primary"
+              >Fale com um consultor</a
+            >
           </div>
         </div>
       </div>
@@ -398,7 +398,10 @@
 
           <div class="col-4 col-lg-2">
             <div class="sponsors__brand">
-              <img src="assets/image/sponsors/growthlabs.png" alt="GrowthLabs" />
+              <img
+                src="assets/image/sponsors/growthlabs.png"
+                alt="GrowthLabs"
+              />
             </div>
           </div>
 
