--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
       <div class="container position-relative z-1">
         <div class="row">
           <div class="col-12 col-lg-10 ml-auto">
-            <h1 class="hero__title">Seja parte <br />dessa experiência</h1>
+            <h1 class="hero__title">
+              <span class="line-1">Seja parte</span> 
+              <span class="line-2">dessa experiência</span>
+            </h1>
             <p class="hero__description">
               Aproveite os preços especiais <br />das cotas ainda em 2019
             </p>
