--- a/index.html
+++ b/index.html
@@ -1,86 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+
+
     <!-- Metas -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
     <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="assets/favicon/favicon-16x16.png"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png"/>
 
     <!-- Meta (Facebook, Linkedin, Twitter) -->
     <title>Patrocínio Superlógica Xperience 2020</title>
-    <meta
-      name="”description”"
-      content="Recebimento de mensalidades com tarifa fixa - Superlógica Educacional"
-    />
-    <meta name="”twitter:card”" value="”summary”" />
-    <meta name="”twitter:site”" content="”@superlogica“" />
-    <meta name="”twitter:title”" content="”“" />
-    <meta
-      name="”twitter:description”"
-      content="Recebimento de mensalidades com tarifa fixa - Superlógica Educacional"
-    />
-    <meta name="”twitter:creator”" content="”“" />
-    <meta name="”twitter:image”" content="”link“" />
+    <meta name="description" content="Patrocínio Superlógica Xperience 2020"/>
+    <meta name="twitter:card" value="summary" />
+    <meta name="twitter:site" content="@superlogica" />
+    <meta name="twitter:title" content="Patrocínio Superlógica Xperience 2020" />
+    <meta name="twitter:description" content="Patrocínio Superlógica Xperience 2020"/>
+    <meta name="twitter:creator" content=""/>
+    <meta name="twitter:image" content="link"/>
 
     <!-- Open Graph -->
-    <meta property="”og:title”" content="" />
-    <meta property="”og:type”" content="”article”" />
-    <meta property="”og:url”" content="”link”" />
-    <meta property="”og:image”" content="”link”" />
-    <meta
-      property="”og:"
-      Recebimento
-      de
-      mensalidades
-      com
-      tarifa
-      fixa
-      -
-      Superlógica
-      Educacional”
-    />
-    <meta property=”og:site_name” content=”https://www.superlogica.com/” />
-    <meta property="”fb:admins”" content="””" />
+    <meta property="og:title" content="" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="link" />
+    <meta property="og:image" content="”link"/> 
+    <meta property="og:site_name" content="https://www.superlogica.com/" />
+    <meta property="fb:admins" content="" />
 
     <!-- css -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/bootstrap/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/bootstrap/bootstrap-grid.min.css"
-    />
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap/bootstrap-grid.min.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     <!-- typekit - fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/jfi0zzh.css" />
     <link rel="stylesheet" href="./assets/fonts/integral-cf-heavy.css" />
     <link rel="stylesheet" href="./assets/fonts/integral-cf-medium.css" />
+
   </head>
 
   <body>
@@ -786,7 +746,6 @@
     <!-- Javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script text="javascript" src="assets/js/app.js"></script> 
-
+    <script text="javascript" src="assets/js/app.js"></script>
   </body>
 </html>
