--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 
     <!-- typekit - fonts -->
-    <link rel="stylesheet" href="https://use.typekit.net/jfi0zzh.css" />
-    <link rel="stylesheet" href="./assets/fonts/integral-cf-heavy.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/jfi0zzh.css" /> 
     <link rel="stylesheet" href="./assets/fonts/integral-cf-medium.css" />
 
   </head>
@@ -72,20 +71,20 @@
             <div class="countdown">
               <div class="countdown__timer">
                 <div class="countdown__box">
-                  <div class="countdown__time" id="days">12</div>
-                  <span class="countdown__description">dias</span>
+                  <div class="countdown__time" id="days">00</div>
+                  <div class="countdown__description">dias</div>
                 </div>
                 <div class="countdown__box">
-                  <div class="countdown__time" id="hours">12</div>
-                  <span class="countdown__description">horas</span>
+                  <div class="countdown__time" id="hours">00</div>
+                  <div class="countdown__description">horas</div>
                 </div>
                 <div class="countdown__box">
-                  <div class="countdown__time" id="minutes">12</div>
-                  <span class="countdown__description">minutos</span>
+                  <div class="countdown__time" id="minutes">00</div>
+                  <div class="countdown__description">minutos</div>
                 </div>
                 <div class="countdown__box d-none d-sm-block d-md-block">
-                  <div class="countdown__time" id="seconds">12</div>
-                  <span class="countdown__description">segundos</span>
+                  <div class="countdown__time" id="seconds">00</div>
+                  <div class="countdown__description">segundos</div>
                 </div>
               </div>
 
