corrigindo logo e favicon

--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@
     <div class="nav">
       <div class="container">
         <a href="https://superlogica.com" target="_blank">
-          <img
-            src="./assets/brand/logo.svg"
-            alt="Logo Superlógica"
-            class="logo"
-          />
+          <div class="brand"></div>
         </a>
       </div>
     </div>
