ajustes apos segundo esculacho

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <span class="line-2">dessa experiência</span>
             </h1>
             <p class="hero__description">
-              Exponha sua marca para <br />
+              <span>Exponha sua marca para</span>
               6000 pessoas de uma vez!
             </p>
           </div>
@@ -133,7 +133,7 @@
           <div class="col-12 col-lg-7 ml-auto mr-auto info">
             <div class="pl-lg-5">
               <h2 class="info__title">
-                Exponha sua marca no <br>
+                Exponha sua marca no <br />
                 Superlógica Xperience 2020!
               </h2>
               <p class="info__description">
@@ -162,20 +162,14 @@
 
     <section class="section">
       <div class="container">
-        
-    
-
-
         <div class="col-12 col-lg-12 m-auto text-center">
-
-        <div class="video-wrapper mt-3">
+          <div class="video-wrapper mt-3">
             <div class="youtube" data-embed="MWjMRq7boc4">
-                <div class="play-button"></div>
-                <img src="./assets/image/thumb.png">
-           </div>
+              <div class="play-button"><span class="play-arrow"></span></div>
+              <img src="./assets/image/thumb.png" />
+            </div>
+          </div>
         </div>
-
-      </div>
 
         <div class="row">
           <div class="col-12 col-lg-4 ml-auto mr-auto">
@@ -744,7 +738,7 @@
     <section class="footer">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 mr-auto d-flex justify-content-center">
+          <div class="col-lg-4 mr-auto d-flex">
             <p>
               Telefone:
               <a href="tel:0800-709-6800" class="inline-link">0800-709-6800</a>
